The header part of the site is finished.

--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,2 +1,7 @@
-$main-font: "Poppins", sans-serif;
-$secondary-font: "Roboto";
+$main-font: "Mulish";
+$white: #fff;
+$black: #000;
+$grey: #7d7987;
+$blue: #458ff6;
+$dark-blue: #1f1534;
+$red: #f00;
