--- a/css/main.css
+++ b/css/main.css
@@ -1,10 +1,34 @@
-/* roboto-regular - latin */
+/* mulish-300 - latin */
 @font-face {
   font-display: swap;
-  font-family: "Roboto";
+  font-family: "Mulish";
+  font-style: normal;
+  font-weight: 300;
+  src: url("../fonts/mulish-v13-latin-300.woff2") format("woff2");
+}
+/* mulish-regular - latin */
+@font-face {
+  font-display: swap;
+  font-family: "Mulish";
   font-style: normal;
   font-weight: 400;
-  src: url("../fonts/roboto-v30-latin-regular.woff2") format("woff2"), url("../fonts/roboto-v30-latin-regular.woff") format("woff");
+  src: url("../fonts/mulish-v13-latin-regular.woff2") format("woff2");
+}
+/* mulish-600 - latin */
+@font-face {
+  font-display: swap;
+  font-family: "Mulish";
+  font-style: normal;
+  font-weight: 600;
+  src: url("../fonts/mulish-v13-latin-600.woff2") format("woff2");
+}
+/* mulish-700 - latin */
+@font-face {
+  font-display: swap;
+  font-family: "Mulish";
+  font-style: normal;
+  font-weight: 700;
+  src: url("../fonts/mulish-v13-latin-700.woff2") format("woff2");
 }
 html {
   -webkit-box-sizing: border-box;
@@ -46,7 +70,7 @@ p {
 }
 
 .container {
-  max-width: 100%;
+  max-width: 1260px;
   width: 100%;
   margin: 0 auto;
   padding: 0 20px;
@@ -57,4 +81,179 @@ img {
   width: 100%;
   height: auto;
   display: inline-block;
+}
+
+.site-header {
+  padding-top: 56px;
+  padding-bottom: 80px;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 1;
+  background: #fff;
+}
+
+.site-header__block {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.site-header__logo {
+  width: 160px;
+  height: 41px;
+  -ms-flex-negative: 0;
+      flex-shrink: 0;
+}
+
+.site-header__list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-column-gap: 40px;
+     -moz-column-gap: 40px;
+          column-gap: 40px;
+}
+
+.site-header__item-link {
+  font-family: "Mulish";
+  font-size: 18px;
+  font-weight: 400;
+  line-height: normal;
+  opacity: 0.5;
+  color: #1f1534;
+}
+.site-header__item-link:active {
+  opacity: 1;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+}
+
+.site-header__menu-logo {
+  display: none;
+}
+
+.site-header__mobile {
+  max-width: 100%;
+  width: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  padding: 56px 20px;
+  overflow-y: scroll;
+  background: #458ff6;
+  -webkit-transform: translateX(100%);
+          transform: translateX(100%);
+  -webkit-transition: 0.1s;
+  transition: 0.1s;
+}
+
+.site-header__mobile-key {
+  -webkit-transform: translateX(0);
+          transform: translateX(0);
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+}
+
+.site-header__mobile-logos {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.site-header__mobile-trafalgar {
+  width: 130px;
+  -ms-flex-negative: 0;
+      flex-shrink: 0;
+  padding: 4px 5px;
+  padding-bottom: 0;
+  border-radius: 27px;
+  background: #fff;
+}
+
+.site-header__mobile-list {
+  margin-top: 50px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  row-gap: 55px;
+}
+
+.site-header__mobile-item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  padding: 0 30px;
+}
+
+.site-header__mobile-item-link {
+  font-family: "Mulish";
+  font-size: 18px;
+  font-weight: 400;
+  line-height: normal;
+  opacity: 0.5;
+  color: #1f1534;
+  color: #fff;
+  opacity: 1;
+}
+.site-header__mobile-item-link:hover {
+  color: #f00;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+}
+
+.site-header__mobile-item i {
+  margin-top: 4px;
+}
+
+@media only screen and (max-width: 900px) {
+  .site-header__logo {
+    width: 130px;
+  }
+  .site-header__list {
+    -webkit-column-gap: 30px;
+       -moz-column-gap: 30px;
+            column-gap: 30px;
+  }
+  .site-header__item-link {
+    font-size: 16.5px;
+  }
+}
+@media only screen and (max-width: 740px) {
+  .site-header__list {
+    display: none;
+  }
+  .site-header__menu-logo {
+    display: inline-block;
+  }
+}
+.hero {
+  padding-top: 177px;
 }/*# sourceMappingURL=main.css.map */
