--- a/scss/_fonts.scss
+++ b/scss/_fonts.scss
@@ -1,10 +1,33 @@
-/* roboto-regular - latin */
+/* mulish-300 - latin */
 @font-face {
   font-display: swap;
-  font-family: "Roboto";
+  font-family: "Mulish";
+  font-style: normal;
+  font-weight: 300;
+  src: url("../fonts/mulish-v13-latin-300.woff2") format("woff2");
+}
+/* mulish-regular - latin */
+@font-face {
+  font-display: swap;
+  font-family: "Mulish";
   font-style: normal;
   font-weight: 400;
-  src: url("../fonts/roboto-v30-latin-regular.woff2") format("woff2"),
-    url("../fonts/roboto-v30-latin-regular.woff") format("woff");
+  src: url("../fonts/mulish-v13-latin-regular.woff2") format("woff2");
+}
+/* mulish-600 - latin */
+@font-face {
+  font-display: swap;
+  font-family: "Mulish";
+  font-style: normal;
+  font-weight: 600;
+  src: url("../fonts/mulish-v13-latin-600.woff2") format("woff2");
+}
+/* mulish-700 - latin */
+@font-face {
+  font-display: swap;
+  font-family: "Mulish";
+  font-style: normal;
+  font-weight: 700;
+  src: url("../fonts/mulish-v13-latin-700.woff2") format("woff2");
 }
 //=============================================================================================================================//
