The hero part of the site has started.

--- a/scss/block/_header.scss
+++ b/scss/block/_header.scss
@@ -107,4 +107,8 @@
   .site-header__menu-logo {
     display: inline-block;
   }
+  .site-header {
+    padding-top: 56px;
+    padding-bottom: 40px;
+  }
 }
