--- a/css/main.css
+++ b/css/main.css
@@ -253,7 +253,37 @@ img {
   .site-header__menu-logo {
     display: inline-block;
   }
+  .site-header {
+    padding-top: 56px;
+    padding-bottom: 40px;
+  }
 }
 .hero {
   padding-top: 177px;
+}
+
+.hero__title {
+  max-width: 1100px;
+  padding: 30px;
+  border-radius: 17px;
+  margin: 40px auto;
+  font-family: "Mulish";
+  font-weight: 600;
+  font-size: 19px;
+  line-height: 33px;
+  background: #1f1534;
+  color: #2eec77;
+}
+.hero__title span {
+  color: #f00;
+}
+.hero__title .hero__string {
+  color: #ce834a;
+  display: inline-block;
+}
+
+@media only screen and (max-width: 740px) {
+  .hero {
+    padding-top: 137px;
+  }
 }/*# sourceMappingURL=main.css.map */
