--- a/scss/block/_hero.scss
+++ b/scss/block/_hero.scss
@@ -1,3 +1,28 @@
 .hero {
   padding-top: 177px;
 }
+.hero__title {
+  max-width: 1100px;
+  padding: 30px;
+  border-radius: 17px;
+  margin: 40px auto;
+  font-family: $main-font;
+  font-weight: 600;
+  font-size: 19px;
+  line-height: 33px;
+  background: $dark-blue;
+  color: $success;
+  span {
+    color: $red;
+  }
+  .hero__string {
+    color: $orange;
+    display: inline-block;
+  }
+}
+
+@media only screen and (max-width: 740px) {
+  .hero {
+    padding-top: 137px;
+  }
+}
