--- a/css/main.css
+++ b/css/main.css
@@ -127,8 +127,8 @@ img {
 
 .site-header__item-link {
   font-family: "Mulish";
-  font-size: 18px;
   font-weight: 400;
+  font-size: 18px;
   line-height: normal;
   opacity: 0.5;
   color: #1f1534;
@@ -215,8 +215,8 @@ img {
 
 .site-header__mobile-item-link {
   font-family: "Mulish";
-  font-size: 18px;
   font-weight: 400;
+  font-size: 18px;
   line-height: normal;
   opacity: 0.5;
   color: #1f1534;
@@ -262,8 +262,185 @@ img {
   padding-top: 177px;
 }
 
+.hero__block {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-column-gap: 109px;
+     -moz-column-gap: 109px;
+          column-gap: 109px;
+  padding-bottom: 192px;
+}
+
+.hero__content {
+  max-width: 445px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  row-gap: 25px;
+}
+
+.hero__content-title {
+  font-family: "Mulish";
+  font-weight: 700;
+  font-size: 48px;
+  line-height: 56px;
+  color: #000;
+}
+
+.hero__content-text {
+  font-family: "Mulish";
+  font-weight: 300;
+  font-size: 21px;
+  line-height: 32px;
+  color: #7d7987;
+  padding-bottom: 20px;
+}
+
+.hero__content-btn {
+  width: 200px;
+  font-family: "Mulish";
+  font-weight: 700;
+  font-size: 18px;
+  padding: 15.6px 39.8px;
+  border: 1.4px solid #458ff6;
+  border-radius: 55px;
+  -ms-flex-negative: 0;
+      flex-shrink: 0;
+  background: #fff;
+  color: #458ff6;
+  border: 1.4px solid transparent;
+  background: #458ff6;
+  color: #fff;
+}
+.hero__content-btn:hover {
+  border: 1.4px solid #458ff6;
+  background: #fff;
+  color: #458ff6;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+}
+
+.hero__img {
+  max-width: 693px;
+  -ms-flex-negative: 0;
+      flex-shrink: 0;
+}
+
+@media only screen and (max-width: 1255px) {
+  .hero__block {
+    -webkit-column-gap: 70px;
+       -moz-column-gap: 70px;
+            column-gap: 70px;
+  }
+  .hero__img {
+    max-width: 580px;
+  }
+}
+@media only screen and (max-width: 1103px) {
+  .hero__content {
+    max-width: 380px;
+  }
+  .hero__content-title {
+    font-size: 37px;
+  }
+  .hero__content-text {
+    font-size: 18px;
+    line-height: 29px;
+    padding-bottom: 10px;
+  }
+  .hero__img {
+    max-width: 500px;
+  }
+}
+@media only screen and (max-width: 930px) {
+  .hero__block {
+    -webkit-column-gap: 60px;
+       -moz-column-gap: 60px;
+            column-gap: 60px;
+  }
+  .hero__content {
+    max-width: 288px;
+    row-gap: 20px;
+  }
+  .hero__content-title {
+    font-size: 32px;
+  }
+  .hero__img {
+    max-width: 450px;
+  }
+}
+@media only screen and (max-width: 845px) {
+  .hero__block {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: column-reverse;
+            flex-direction: column-reverse;
+    row-gap: 70px;
+  }
+  .hero__content {
+    max-width: 445px;
+    row-gap: 25px;
+  }
+  .hero__content-title {
+    font-size: 48px;
+  }
+  .hero__content-text {
+    font-size: 21px;
+    line-height: 32px;
+    padding-bottom: 20px;
+  }
+  .hero__img {
+    max-width: 650px;
+  }
+}
 @media only screen and (max-width: 740px) {
   .hero {
     padding-top: 137px;
+  }
+  .hero__img {
+    max-width: 580px;
+  }
+}
+@media only screen and (max-width: 620px) {
+  .hero__block {
+    row-gap: 50px;
+  }
+  .hero__content {
+    max-width: 380px;
+    margin: 0 auto;
+  }
+  .hero__content-title {
+    font-size: 40px;
+  }
+  .hero__img {
+    max-width: 500px;
+  }
+}
+@media only screen and (max-width: 400px) {
+  .hero__content-title {
+    font-size: 37px;
+  }
+}
+@media only screen and (max-width: 360px) {
+  .hero__block {
+    row-gap: 40px;
+  }
+  .hero__content-title {
+    font-size: 30px;
+  }
+  .hero__content-text {
+    font-size: 19px;
+    line-height: 34px;
   }
 }/*# sourceMappingURL=main.css.map */
