The hero part of the site has been updated.

--- a/css/main.css
+++ b/css/main.css
@@ -431,6 +431,9 @@ img {
   .hero__content-title {
     font-size: 37px;
   }
+  .hero__content {
+    font-size: 17px;
+  }
 }
 @media only screen and (max-width: 360px) {
   .hero__block {
