--- a/scss/block/_hero.scss
+++ b/scss/block/_hero.scss
@@ -125,6 +125,9 @@
   .hero__content-title {
     font-size: 37px;
   }
+  .hero__content {
+    font-size: 17px;
+  }
 }
 @media only screen and (max-width: 360px) {
   .hero__block {
