Hero button updated.

--- a/css/main.css
+++ b/css/main.css
@@ -431,7 +431,7 @@ img {
   .hero__content-title {
     font-size: 37px;
   }
-  .hero__content {
+  .hero__content-btn {
     font-size: 17px;
   }
 }
