--- a/scss/block/_hero.scss
+++ b/scss/block/_hero.scss
@@ -122,6 +122,9 @@
   }
 }
 @media only screen and (max-width: 400px) {
+  .hero__block {
+    row-gap: 30px;
+  }
   .hero__content-title {
     font-size: 37px;
   }
