--- a/scss/block/_hero.scss
+++ b/scss/block/_hero.scss
@@ -1,11 +1,12 @@
 .hero {
-  padding-top: 177px;
+  margin-top: 136px;
 }
 .hero__block {
   display: flex;
   align-items: center;
   justify-content: space-between;
   column-gap: 109px;
+  padding-top: 40px;
   padding-bottom: 192px;
 }
 .hero__content {
@@ -99,9 +100,6 @@
   }
 }
 @media only screen and (max-width: 740px) {
-  .hero {
-    padding-top: 137px;
-  }
   .hero__img {
     max-width: 580px;
   }
@@ -124,6 +122,8 @@
 @media only screen and (max-width: 400px) {
   .hero__block {
     row-gap: 30px;
+    padding-top: 20px;
+    padding-bottom: 70px;
   }
   .hero__content-title {
     font-size: 35px;
