--- a/css/main.css
+++ b/css/main.css
@@ -428,7 +428,7 @@ img {
 @media only screen and (max-width: 400px) {
   .hero__block {
     row-gap: 30px;
-    padding-top: 20px;
+    padding-top: 0;
     padding-bottom: 70px;
   }
   .hero__content-title {
