--- a/scss/block/_hero.scss
+++ b/scss/block/_hero.scss
@@ -122,7 +122,7 @@
 @media only screen and (max-width: 400px) {
   .hero__block {
     row-gap: 30px;
-    padding-top: 20px;
+    padding-top: 0;
     padding-bottom: 70px;
   }
   .hero__content-title {
