--- a/css/main.css
+++ b/css/main.css
@@ -434,6 +434,9 @@ img {
   .hero__content-title {
     font-size: 35px;
   }
+  .hero__content-btn {
+    font-size: 17px;
+  }
 }
 @media only screen and (max-width: 360px) {
   .hero__block {
