--- a/scss/block/_services.scss
+++ b/scss/block/_services.scss
@@ -1,5 +1,6 @@
 .services {
   margin-bottom: 220px;
+  position: relative;
 }
 .services__block {
   display: flex;
@@ -34,6 +35,32 @@
   flex-wrap: wrap;
   justify-content: space-around;
   gap: 37px 35px;
+  &::before {
+    content: "";
+    max-width: 938px;
+    width: 100%;
+    height: 671px;
+    z-index: -1;
+    background-image: url("../../images/services-background.svg");
+    background-repeat: no-repeat;
+    position: absolute;
+    top: 215px;
+    left: -30px;
+    display: inline-block;
+  }
+  &::after {
+    content: "";
+    max-width: 132px;
+    width: 100%;
+    height: 115px;
+    z-index: -1;
+    background-image: url("../../images/services-element.svg");
+    background-repeat: no-repeat;
+    position: absolute;
+    top: 550px;
+    right: 117px;
+    display: inline-block;
+  }
 }
 .services__item {
   max-width: 350px;
@@ -164,6 +191,21 @@
   }
 }
 
+@media only screen and (max-width: 968px) {
+  .services__list::before {
+    top: 550px;
+  }
+}
+@media only screen and (max-width: 774.5px) {
+  .services__list::before {
+    display: none;
+  }
+}
+@media only screen and (max-width: 686.7px) {
+  .services__list::after {
+    display: none;
+  }
+}
 @media only screen and (max-width: 400px) {
   .services__content-title {
     font-size: 30px;
