--- a/scss/block/_providers.scss
+++ b/scss/block/_providers.scss
@@ -134,6 +134,9 @@
   }
 }
 @media only screen and (max-width: 400px) {
+  .providers {
+    margin-bottom: 70px;
+  }
   .providers__block {
     row-gap: 30px;
   }
