--- a/scss/block/_services.scss
+++ b/scss/block/_services.scss
@@ -207,6 +207,9 @@
   }
 }
 @media only screen and (max-width: 400px) {
+  .services {
+    margin-bottom: 70px;
+  }
   .services__content-title {
     font-size: 30px;
   }
