--- a/css/main.css
+++ b/css/main.css
@@ -1283,4 +1283,172 @@ img {
   .testimonials__title {
     font-size: 25px;
   }
+}
+.article {
+  margin-bottom: 202px;
+}
+
+.article__block {
+  margin: 0 auto;
+  text-align: center;
+}
+
+.article__title {
+  font-family: "Mulish";
+  font-weight: 700;
+  font-size: 48px;
+  line-height: 56px;
+  color: #000;
+  font-size: 36px;
+}
+
+.article__line {
+  width: 56px;
+  height: 2px;
+  -ms-flex-negative: 0;
+      flex-shrink: 0;
+  margin: 26px auto 79px auto;
+  border-radius: 5px;
+  background: #000;
+}
+
+.article__list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-column-gap: 35px;
+     -moz-column-gap: 35px;
+          column-gap: 35px;
+  margin-bottom: 72px;
+}
+
+.article__item {
+  max-width: 350px;
+  padding-bottom: 35px;
+  border-radius: 20px;
+  text-align: start;
+  -webkit-box-shadow: 10px 40px 50px 0px rgba(229, 233, 246, 0.4);
+          box-shadow: 10px 40px 50px 0px rgba(229, 233, 246, 0.4);
+  background: #fff;
+}
+
+.article__item img {
+  border-top-left-radius: 20px;
+  border-top-right-radius: 20px;
+  padding-bottom: 25px;
+}
+
+.article__item-title {
+  font-family: "Mulish";
+  font-weight: 700;
+  font-size: 48px;
+  line-height: 56px;
+  color: #000;
+  font-size: 21px;
+  line-height: 32px;
+  padding: 0 50px 12px 33px;
+}
+
+.article__item-text {
+  font-family: "Mulish";
+  font-weight: 300;
+  font-size: 21px;
+  line-height: 32px;
+  color: #7d7987;
+  font-size: 16px;
+  line-height: 28px;
+  padding: 0 50px 25px 33px;
+}
+
+.article__item-link {
+  font-family: "Mulish";
+  font-weight: 700;
+  font-size: 48px;
+  line-height: 56px;
+  color: #000;
+  font-weight: 600;
+  font-size: 17px;
+  line-height: 28px;
+  padding: 0 50px 0 33px;
+  color: #458ff6;
+}
+.article__item-link:hover {
+  color: #8a2be2;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+}
+.article__item-link::after {
+  content: "";
+  width: 14.143px;
+  height: 9px;
+  -ms-flex-negative: 0;
+      flex-shrink: 0;
+  margin-left: 10px;
+  vertical-align: middle;
+  background-image: url("../../images/right-arrow-icon.svg");
+  background-repeat: no-repeat;
+  display: inline-block;
+}
+
+.article__btn {
+  width: 200px;
+  font-family: "Mulish";
+  font-weight: 700;
+  font-size: 18px;
+  padding: 15.6px 39.8px;
+  border: 1.4px solid #458ff6;
+  border-radius: 55px;
+  -ms-flex-negative: 0;
+      flex-shrink: 0;
+  background: #fff;
+  color: #458ff6;
+}
+.article__btn:hover {
+  background: #458ff6;
+  color: #fff;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+}
+
+@media only screen and (max-width: 1100px) {
+  .article__list {
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-column-gap: 30px;
+       -moz-column-gap: 30px;
+            column-gap: 30px;
+    row-gap: 70px;
+  }
+}
+@media only screen and (max-width: 501px) {
+  .article__title {
+    font-size: 34px;
+  }
+}
+@media only screen and (max-width: 400px) {
+  .article {
+    margin-bottom: 90px;
+  }
+  .article__list {
+    row-gap: 50px;
+  }
+  .article__title {
+    font-size: 30px;
+  }
+  .article__line {
+    margin: 30px auto 70px auto;
+  }
+}
+@media only screen and (max-width: 360px) {
+  .article__list {
+    row-gap: 40px;
+  }
+  .article__title {
+    font-size: 27px;
+  }
 }/*# sourceMappingURL=main.css.map */
