--- a/scss/block/_article.scss
+++ b/scss/block/_article.scss
@@ -19,8 +19,9 @@
 }
 .article__list {
   display: flex;
-  justify-content: center;
-  column-gap: 35px;
+  justify-content: space-around;
+  flex-wrap: wrap;
+  gap: 70px 35px;
   margin-bottom: 72px;
 }
 .article__item {
@@ -30,6 +31,10 @@
   text-align: start;
   box-shadow: 10px 40px 50px 0px $services-item-box-shadow;
   background: $white;
+  &:hover {
+    box-shadow: none;
+    transition: 0.3s;
+  }
 }
 .article__item img {
   border-top-left-radius: 20px;
@@ -55,10 +60,6 @@
   line-height: 28px;
   padding: 0 50px 0 33px;
   color: $blue;
-  &:hover {
-    color: $violet;
-    transition: 0.3s;
-  }
   &::after {
     content: "";
     width: 14.143px;
@@ -80,14 +81,6 @@
   }
 }
 
-@media only screen and (max-width: 1100px) {
-  .article__list {
-    justify-content: space-around;
-    flex-wrap: wrap;
-    column-gap: 30px;
-    row-gap: 70px;
-  }
-}
 @media only screen and (max-width: 501px) {
   .article__title {
     font-size: 34px;
