--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -3,6 +3,7 @@ $white: #fff;
 $black: #000;
 $grey: #7d7987;
 $blue: #458ff6;
+$light-blue: #67c3f3;
 $dark-blue: #1f1534;
 $violet: #8a2be2;
 $red: #f00;
